name:                tracing
version:             0.0.2.2
synopsis:            Distributed tracing
description:         https://github.com/mtth/tracing
homepage:            https://github.com/mtth/tracing
license:             BSD3
license-file:        LICENSE
author:              Matthieu Monsch
maintainer:          matthieu.monsch@gmail.com
copyright:           2019 Matthieu Monsch
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Trace
                     , Control.Monad.Trace.Class
                     , Monitor.Tracing
                     , Monitor.Tracing.Zipkin
  other-modules:       Control.Monad.Trace.Internal
  build-depends:       aeson >= 1.4 && < 1.5
                     , base >= 4.8 && < 5
                     , base16-bytestring >= 0.1 && < 0.2
                     , bytestring >= 0.10 && < 0.11
                     , case-insensitive >= 1.2 && < 1.3
                     , containers >= 0.6 && < 0.7
                     , http-client >= 0.5 && < 0.7
                     , ip >= 1.4 && < 1.6
                     , mtl >= 2.2 && < 2.3
                     , network >= 2.8 && < 3.2
                     , random >= 1.1 && < 1.2
                     , stm >= 2.5 && < 2.6
                     , text >= 1.2 && < 1.3
                     , time >= 1.8 && < 1.10
                     , transformers >= 0.5 && < 0.6
                     , unliftio >= 0.2 && < 0.3
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tracing-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.8 && <5
                     , containers >= 0.6 && < 0.7
                     , hspec >=2.6 && <2.8
                     , mtl >= 2.2 && < 2.3
                     , stm >= 2.5 && < 2.6
                     , text >= 1.2 && < 1.3
                     , tracing
                     , unliftio >= 0.2 && < 0.3
  default-language: Haskell2010

executable zipkin-example
  hs-source-dirs:      app
  main-is:             ZipkinExample.hs
  build-depends:       aeson >= 1.4 && < 1.5
                     , base >=4.8 && <5
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.6 && < 0.7
                     , ip >= 1.4 && < 1.5
                     , stm >= 2.5 && < 2.6
                     , text >= 1.2 && < 1.3
                     , tracing
                     , unliftio >= 0.2 && < 0.3
  default-language:    Haskell2010
