name:                tracing
version:             0.0.4.0
synopsis:            Distributed tracing
description:         An OpenTracing-compliant, simple, and extensible distributed tracing library.
homepage:            https://github.com/mtth/tracing
license:             BSD3
license-file:        LICENSE
author:              Matthieu Monsch
maintainer:          mtth@apache.org
copyright:           2019 Matthieu Monsch
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Trace
                     , Control.Monad.Trace.Class
                     , Monitor.Tracing
                     , Monitor.Tracing.Local
                     , Monitor.Tracing.Zipkin
  other-modules:       Control.Monad.Trace.Internal
  build-depends:       aeson >= 1.4
                     , base >= 4.8 && < 5
                     , base16-bytestring >= 0.1
                     , bytestring >= 0.10
                     , case-insensitive >= 1.2
                     , containers >= 0.6
                     , http-client >= 0.5
                     , ip >= 1.4
                     , mtl >= 2.2
                     , network >= 2.8
                     , random >= 1.1
                     , stm >= 2.5
                     , text >= 1.2
                     , time >= 1.8
                     , transformers >= 0.5
                     , unliftio >= 0.2
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tracing-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.8 && <5
                     , containers >= 0.6
                     , hspec >=2.6
                     , mtl >= 2.2
                     , stm >= 2.5
                     , text >= 1.2
                     , tracing
                     , unliftio >= 0.2
  default-language:    Haskell2010
