cabal-version: 2.0

name: tracing
version: 0.0.7.3
synopsis: Distributed tracing
description:
  An OpenTracing-compliant, simple, and extensible distributed tracing library.

category: Web
homepage: https://github.com/mtth/tracing
license: BSD3
license-file: LICENSE
author: Matthieu Monsch
maintainer: mtth@apache.org
copyright: 2020 Matthieu Monsch

build-type: Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/mtth/tracing

library
  hs-source-dirs: src
  exposed-modules:
      Control.Monad.Trace
    , Control.Monad.Trace.Class
    , Monitor.Tracing
    , Monitor.Tracing.Local
    , Monitor.Tracing.Zipkin
  other-modules:
      Control.Monad.Trace.Internal
  build-depends:
      aeson >= 1.4
    , base >= 4.9 && < 5
    , base16-bytestring >= 1.0
    , bytestring >= 0.10
    , case-insensitive >= 1.2
    , containers >= 0.6
    , http-client >= 0.5
    , mtl >= 2.2
    , network >= 2.8
    , random >= 1.1
    , stm >= 2.5
    , text >= 1.2
    , time >= 1.8
    , transformers >= 0.5
    , unliftio >= 0.2
  ghc-options: -Wall
  default-language: Haskell2010

test-suite tracing-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends:
      base
    , containers
    , hspec >=2.6
    , mtl
    , stm
    , text
    , tracing
    , unliftio
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
